# TaskSystem

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Example.sln  Example.vcxproj  Example.vcxproj.filters  MergeSortTasks.sln  TaskSystem.sln  TaskSystem.vcxproj  TaskSystem.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
MergeSortTasks/: Closure.h  Engine.cpp  Engine.h  Job.cpp  Job.h  Job.hpp  JobQueue.cpp  JobQueue.h  MergeSortTasks.vcxproj  MergeSortTasks.vcxproj.filters  ObjectPool.h  Pool.cpp  Pool.h  Singleton.h  StaticVector.h  Task.h  TaskSort.h  Worker.cpp  Worker.h  chart.html  main.cpp  output.CSV  output.js  output.json  sort.h
example/: main.cpp  sort.h
include/: Closure.hpp  Engine.hpp  Pool.hpp  StaticVector.hpp  Task.hpp  TaskQueue.hpp  Worker.hpp
src/: CMakeLists.txt  Engine.cpp  Job.cpp  JobQueue.cpp  Pool.cpp  Task.cpp  TaskQueue.cpp  TaskSystem.vcxproj  TaskSystem.vcxproj.filters  Worker.cpp  cmake_install.cmake
test/: test.cpp
